Changelog for s6.

In 2.11.2.0
-----------

 - Adaptation to skalibs-2.13.0.0.
 - Bugfixes.
 - The name of the service is now passed as an argument to ./run and
as the third argument to ./finish.
 - The 1-second service restart delay can now only be skipped when
the service is ready.


In 2.11.1.2
-----------

 - Bugfixes.


In 2.11.1.1
-----------

 - Adaptation to skalibs-2.12.0.0.


In 2.11.1.0
-----------

 - Bugfixes.
 - s6-applyuidgid and s6-setuidgid can now be used by non-root users.
 - New s6-envdir option: -L, for unlimited size environment variables.


In 2.11.0.1
-----------

 - Bugfixes.


In 2.11.0.0
-----------

 - Adaptation to skalibs-2.11.0.0.
 - Bugfixes.
 - s6-svwait now supports -r and -R options to wait for restarts.
 - New service directory file: lock-fd, to take a lock before
starting a service, protecting against concurrent instances.
 - s6/lock.h, s6/supervise.h, s6/fdholder.h: simpler header names
 - New binaries: s6-svlink, s6-svunlink
 - s6-ioconnect bugfix; does not support zero-copy anymore.


In 2.10.0.3
-----------

 - Bugfixes.


In 2.10.0.2
-----------

 - Bugfixes.


In 2.10.0.1
-----------

 - Bugfixes.


In 2.10.0.0
-----------

 - Bugfixes.
 - Changes to s6-svscan and s6-svscanctl: the list of commands
that can be sent to s6-svscan has been thoroughly cleaned up.
s6-svscan now scans and prunes on SIGHUP.
 - Changes to s6-supervise and s6-svc: -X not supported anymore,
nosetsid not supported anymore. SIGHUP now properly closes
stdin/stdout to allow the service to naturally exit on EOF;
SIGQUIT semantics changed to immediately bail. SIGINT is now
trapped and forwarded to the service's process group.
 - New binary: s6-svperms, implementing a split permissions
model. (By default, everything is the same as before.)
 - New binary: s6-usertree-maker, creating service directories
for supervision trees managed by users.


In 2.9.2.0
----------

 - Bugfixes.
 - New -d option to s6-sudod.


In 2.9.1.0
----------

 - Bugfixes.