@@ -1,4 +1,4 @@
-Copyright (c) 2011-2022 Laurent Bercot <ska-skaware@skarnet.org>
+Copyright (c) 2011-2023 Laurent Bercot <ska-skaware@skarnet.org>
 
 Permission to use, copy, modify, and distribute this software for any
 purpose with or without fee is hereby granted, provided that the above
