@@ -279,6 +279,8 @@ synchronization</a>.
 <li><a href="s6-instance-create.html">The <tt>s6-instance-create</tt> program</a></li>
 <li><a href="s6-instance-delete.html">The <tt>s6-instance-delete</tt> program</a></li>
 <li><a href="s6-instance-control.html">The <tt>s6-instance-control</tt> program</a></li>
+<li><a href="s6-instance-status.html">The <tt>s6-instance-status</tt> program</a></li>
+<li><a href="s6-instance-list.html">The <tt>s6-instance-list</tt> program</a></li>
 </ul>
 
 <h4> Timed lock acquisition </h4>
