@@ -27,6 +27,7 @@ dependency bumped to 2.13.0.0. </li>
 optional dependency bumped to 0.2.0.2. </li>
  <li> <a href="//skarnet.org/software/execline/">execline</a>
 recommended dependency bumped to 2.9.1.0. </li>
+ <li> New feature: implementation of <a href="instances.html">instances</a>. </li>
 </ul>
 
 <h2> in 2.11.1.2 </h2>
